--- a/public/style.css
+++ b/public/style.css
@@ -6,4 +6,29 @@ body {
   flex-direction: column;
 }
 
+h1 {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+h4 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+h5 {
+  font-size: 12px;
+  font-weight: bold;
+}
+
 /*# sourceMappingURL=style.css.map */
