--- a/src/style/_template.scss
+++ b/src/style/_template.scss
@@ -1,30 +1,51 @@
 $dark: #333333;
 $modal-black: rgba(51, 51, 51, 0.75);
-$stroke-dark: #8B8B8B;
-$stroke-light: #D5D5D5;
-$light: #D5D5D5;
-$button: #FFC702;
-$active:  #FF5C16;
-$inverce: #A93DFF;
+$stroke-dark: #8b8b8b;
+$stroke-light: #d5d5d5;
+$light: #d5d5d5;
+$button: #ffc702;
+$active: #ff5c16;
+$inverce: #a93dff;
 
-h1{
-    font-size: 30px;
-    font-weight: bold;
+h1 {
+  font-size: 30px;
+  font-weight: bold;
 }
-h2{
-    font-size: 25px;
-    font-weight: bold;
+h2 {
+  font-size: 25px;
+  font-weight: bold;
 }
-h3{
-    font-size: 20px;
-    font-weight: bold;
+h3 {
+  font-size: 20px;
+  font-weight: bold;
 }
-h4{
-    font-size: 16px;
-    font-weight: bold;
+h4 {
+  font-size: 16px;
+  font-weight: bold;
 }
-h5{
-    font-size: 12px;
-    font-weight: bold;
+h5 {
+  font-size: 12px;
+  font-weight: bold;
 }
 
+.BodyM {
+  font-weight: 500;
+  font-size: 20px;
+}
+.BodyL {
+  font-weight: 300;
+  font-size: 20px;
+}
+.BodySmall {
+  font-weight: 300;
+  font-size: 12px;
+}
+.CaptionM {
+  font-weight: 500;
+  font-weight: 16px;
+}
+.CaptionL {
+  font-weight: 300;
+  font-size: 16px;
+}
+  
