--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -8,3 +8,39 @@ body {
 
 @import 'template';
 
+.content {
+  flex: 1;
+}
+
+.bottom-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 10px 0;
+  border-top: 1px solid $stroke-dark;
+  a{
+    text-decoration: none;
+    .button{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 0 20px;
+      gap: 13px;
+      &.active{
+        h5{
+          color: $inverce;
+        }
+        svg{
+          fill: $inverce;
+          stroke: $inverce;
+        }
+      }
+      h5{
+        color: $stroke-dark;
+      }
+    }
+  }
+
+}
+
